# IMSAFE

./: .gitignore  CLAUDE.md
_knowledge-base/design-rules/: JLCPCB_Checklist.md
_knowledge-base/stm32-reference/: STM32_Peripheral_Patterns.md
_templates/kicad-project/: JLCPCB_Design_Rules.md
projects/IMSAFE_Assistant/: File_structure_for_git.md  IMSAFE Assitant.md
projects/IMSAFE_Assistant/.claude/: settings.local.json
projects/IMSAFE_Assistant/.claude/agents/: patch-worker.md  verify-worker.md
projects/IMSAFE_Assistant/IMSAFE/: # IMSAFE – Work Hook (GUPP Queue).md  .gitattributes  .gitignore  LICENSE  README.md  WORK_HOOK.md
projects/IMSAFE_Assistant/IMSAFE/docs/00-functional-spec/: IMSAFE-Functional-Spec.md
projects/IMSAFE_Assistant/IMSAFE/docs/01-requirements/: requirements.md  verification-plan.md
projects/IMSAFE_Assistant/IMSAFE/docs/02-architecture/: system-architecture.md
projects/IMSAFE_Assistant/IMSAFE/docs/03-component-selection/: ancillary-components-trade-study.md  connectivity-trade-study.md  decision-log.md  display-trade-study.md  mcu-trade-study.md  (+10 more)
projects/IMSAFE_Assistant/IMSAFE/docs/04-datasheets/Radar/bgt24ltr11-demo-distance2gol-fmcw-software-en/Firmware_Software/Communication Library/ComLib_C_Interface/examples/D2GL_basics/: CMakeLists.txt
projects/IMSAFE_Assistant/IMSAFE/firmware/: README.md
projects/new bike light/: bikelight_functional_spec_revA.md
projects/new bike light/pcb/aux_pcb_1_power/: BOM_JLCPCB.csv  PowerBoard_Design.md  README.md  aux_pcb_1_power.kicad_pcb  aux_pcb_1_power.kicad_pro  aux_pcb_1_power.kicad_sch
(+592 files in other folders)
